updated with pictures on success screen and failure screen

--- a/failure.html
+++ b/failure.html
@@ -10,12 +10,21 @@
 
     <title>Document</title>
 </head>
+
+<style>
+    img{
+        width: 50%;
+        height: auto;
+    }
+
+</style>
 <body>
 
     <div class="jumbotron jumbotron-fluid">
          <div class="container">
-            <h1 class="display-4">Lorem ipsum dolor sit.</h1>
-            <a href="" class="lead">Lorem, ipsum dolor.</a>
+             <img src="/images/computer.png" alt="computer">
+            <h1 class="display-4">FAILED, TRY AGAIN</h1>
+            <a href="" class="lead">HOME</a>
         </div>
     </div>
 
