--- a/signup.html
+++ b/signup.html
@@ -33,11 +33,11 @@
 </head>
 
 <body class="text-center">
-    <form action="/" method="post" class="form-signin">
+    <form action="/" method="POST" class="form-signin" autocomplete="off">
 
         <img class="mb-4" src="/images/onelook.png" alt="bluesteel" width="72" height="72">
 
-        <h1 class="h3 mb-3 font-weight-normal">A center for kids to learn how to read really good</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Center for kids who can't read good</h1>
 
         
         <input type="text" name="fName" class="form-control top" placeholder="First Name" required autofocus>
