--- a/success.html
+++ b/success.html
@@ -10,12 +10,21 @@
 
     <title>Document</title>
 </head>
+
+<style>
+    img{
+        width: 50%;
+        height: auto;
+    }
+</style>
+
 <body>
 
     <div class="jumbotron jumbotron-fluid">
          <div class="container">
-            <h1 class="display-4">good</h1>
-            <a href="" class="lead">Lorem, ipsum dolor.</a>
+             <img src="/images/magnum.png" alt="Magnum">
+            <h1 class="display-4">SUCCESS!</h1>
+            <a href="" class="lead">home</a>
         </div>
     </div>
 
